Fix display widths and wrapping

--- a/Controller/www/style.css
+++ b/Controller/www/style.css
@@ -117,6 +117,13 @@
     }
 }
 
+#circuitListCards{
+    .card{
+        min-width: 25em;
+        max-width: 25em;
+    }
+}
+
 @media screen and (max-width: 575px) {
     .applicationName {
         display: none !important;
